--- a/exercises.qmd
+++ b/exercises.qmd
@@ -1,14 +1,19 @@
 # Exercises
 
 1. Pick up Git basics and set up an account at GitHub if you don't have
-   one. Please practice the tips on Git in the notes. My grader will check the
-   repo.
+   one. Please practice the tips on Git in the notes. Make sure you have at
+   least 10 commits in the repo, each with informative message. Keep checking
+   the status of your repo with `git status`. My grader will grade the repo.
     1. Clone the `ids-s23` repo to your own computer.
     1. Add your name and wishes to the Wishlist; commit with an informative message.
 	1. Remove the `Last, First` entry from the list; commit.
 	1. Create a new file called `add.qmd` containing a few lines of texts; commit.
 	1. Remove `add.qmd` (pretending that this is by accident; commit.
-    1. Recover the accidently removed file `add.qmd`; add a few more lines; commit.
+    1. Recover the accidently removed file `add.qmd`; add a long line (a
+       paragraph without a hard break); add a short line (under 80 characters);
+       commit.
+    1. Change one word in the long line and one word in the short line; commit.
+	1. Use `git diff` to see the difference between the last two commits.
 	1. Put the repo into the GitHub Classroom homework repo and push.
 
 	
