--- a/intro.qmd
+++ b/intro.qmd
@@ -71,9 +71,9 @@ Check your Python coding styles against the recommended styles:
 This is a wish list from all members of the class (alphabetical
 order). Add yours; note the syntax of nested list in Markdown.
 
-+ Last, First
-    - Complete ...
-    - Become proficient ...
++ Win, Marlins
+    - Run my own deep learning algorithm on a real dataset
+    - Become proficient with Git
 + Yan, Jun
     - Make data science more accessible to undergraduates
     - Co-develop a Quarto Book in collaboration with the students
