--- a/intro.qmd
+++ b/intro.qmd
@@ -70,7 +70,9 @@ Check your Python coding styles against the recommended styles:
 
 This is a wish list from all members of the class (alphabetical
 order). Add yours; note the syntax of nested list in Markdown.
-
++ Mastrorilli, Ginamarie 
+    - Become more comfortable with git. 
+    - Increase my ability to learn new programs. 
 + Win, Marlins
     - Run my own deep learning algorithm on a real dataset
     - Become proficient with Git
