--- a/intro.qmd
+++ b/intro.qmd
@@ -83,6 +83,9 @@ order). Add yours; note the syntax of nested list in Markdown.
 + Yeung, Shannon
     - Learn more about Git
     - get aa more well rounded understanding of data science
++ Lunetta, Giovanni
+    - Learn to properly clean a dataset
+    - Become proficient in building a machine learning model
 
 ### Presentation Orders
 
