commit # adding lines

--- a/add.qmd
+++ b/add.qmd
@@ -1,1 +1,5 @@
 Homework to add new qmd file for data science. 
+
+This is me adding a long line (or a paragraph) without a hard break. This is for Homework 1 of Data Science. I will be commiting this to git. 
+
+Hello this is Gina. 
