--- a/references.bib
+++ b/references.bib
@@ -16,4 +16,9 @@
   numpages = {15}
 }
 
-
+@book{vanderplas2022python,
+  title={Python Data Science Handbook: {E}ssential Tools for Working with Data},
+  author={VanderPlas, Jake},
+  year={2022},
+  publisher={O'Reilly Media, Inc.}
+}
