clarify using ipython and jupyter

--- a/intro.qmd
+++ b/intro.qmd
@@ -53,9 +53,11 @@ Set up Python on your computer:
 - Python package manager __miniconda__ or __pip__.
 - Integrated Development Environment (IDE) (Jupyter Notebook; RStudio; VS Code; Emacs; etc.)
 
+I will be using IPython and Jupyter Notebook in class.
+
 Readability is important!
 Check your Python coding styles against the recommended styles:
-<https://peps.python.org/pep-0008/>. A good place to start if the Section on
+<https://peps.python.org/pep-0008/>. A good place to start is the Section on
 "Code Lay-out". 
 
 ## Data Challenges
