--- a/intro.qmd
+++ b/intro.qmd
@@ -82,6 +82,9 @@ order). Add yours; note the syntax of nested list in Markdown.
 + Mastrorilli, Ginamarie 
     - Become more comfortable with git. 
     - Increase my ability to learn new programs. 
++ Nhan, Nathan
+    - Properly learn how to use Git 
+    - Increase my understanding of data science and data collection
 + Sullivan, Collin
     - I would like to learn to be able to use data science well enough to get a job in the field
     - Discover if this area of statistics is one that I am passionate about
