--- a/intro.qmd
+++ b/intro.qmd
@@ -97,6 +97,9 @@ order). Add yours; note the syntax of nested list in Markdown.
 + Yeung, Shannon
     - Learn more about Git
     - get aa more well rounded understanding of data science
++ Noel, Luke
+    - Learn and become proficient in Git/Github
+    - Use different data science techniques like deep/machine learning
 
 ### Presentation Orders
 
