Changed a word in both lines

--- a/add.qmd
+++ b/add.qmd
@@ -1,4 +1,4 @@
 Few lines
 of text
-Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long LineLong Line Long Line Long Line Long Line
-Short line
+Long space Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long Line Long LineLong Line Long Line Long Line Long Line
+Short space
