--- a/intro.qmd
+++ b/intro.qmd
@@ -91,6 +91,9 @@ order). Add yours; note the syntax of nested list in Markdown.
     - Gain some project experience that I can cite or reference in interviews
     - Be able to speak intelligently about data science and it's facets
     - Gain practical experience
++ Whitney, William
+    - Gain knowledge about the field of data science.
+    - Get experience in Git to use in a professional manner.
 + Win, Marlins
     - Run my own deep learning algorithm on a real dataset
     - Become proficient with Git
