adding new lines in add.qmd

--- a/add.qmd
+++ b/add.qmd
@@ -1,1 +1,4 @@
-lalalal hahaha
+I assume our time was forever, naturally seemed forever. Those happy days we spent together. Cause you were always beside me. Then suddenly I realized, these happy days won’t ever last. Out of all the souls we create, in fact, how we met was a miracle. I see you peacefully, you’re in your dreams. Everything seems calm and free. I know, If we want this want to last forever again. Let’s go back to that moment of day. As time just goes by and we all change. And not just us, the world keeps changing. But little did I know that this was coming. Cause you were there always smiling. I wonder how you’ll be in the future. I wouldn’t know it’s hard to figure. But by accepting this feeling inside, will eventually create a miracle. I see you smiling there, So peacefully and cheerfully, I see you talk at me. These happy days must carry on. So once again let’s go back to that day. To where we had hand in hand, I see you peacefully, you’re in your dreams. Everything seems calm and free. I know, If we want this want to last forever again. Let’s go back to that moment of day. I see you smiling there, So peacefully and cheerfully, talking at me. These happy days must carry on. So once again let’s go back to the start. This goodbye is not the end. I know until we meet again, our feelings will remain the same. Together as one, till we find ourselves again
+
+"Where We Belong" from Xenoblade Chronicles 3
+
