--- a/add.qmd
+++ b/add.qmd
@@ -2,6 +2,6 @@ This is a final version.
 This is created to test commands.
 Hopefully, this file is okay.
 
-This file is successfully restored from a previous commit. This was a hard task to do. I hope that I can understand how to perform commands better in Git Bash and understand the syntax better.
+This file is successfully restored from a previous commit. This was a difficult task to do. I hope that I can understand how to perform commands better in Git Bash and understand the syntax better.
 
-This is a short line for homework purposes.
+This is a short text for homework purposes.
