--- a/intro.qmd
+++ b/intro.qmd
@@ -76,6 +76,10 @@ Check your Python coding styles against the recommended styles:
 This is a wish list from all members of the class (alphabetical
 order). Add yours; note the syntax of nested list in Markdown.
 
++ Bedard, Kaitlyn 
+    - Learn how to use Git proficiently
+    - Gain practical experience using data science methods
+    - Learn to use python libraries for data science
 + Lunetta, Giovanni
     - Learn to properly clean a dataset
     - Become proficient in building a machine learning model
