--- a/intro.qmd
+++ b/intro.qmd
@@ -80,6 +80,10 @@ order). Add yours; note the syntax of nested list in Markdown.
     - Learn how to use Git proficiently
     - Gain practical experience using data science methods
     - Learn to use python libraries for data science
++ Ho,Garrick
+    - I want to be more confident with git
+    - Be able to create a data science project
+    - Learn more about data science
 + Lunetta, Giovanni
     - Learn to properly clean a dataset
     - Become proficient in building a machine learning model
