--- a/intro.qmd
+++ b/intro.qmd
@@ -213,7 +213,7 @@ Please use the following table to sign up.
   02/20  | Chua, Yang Kang        |
   02/20  | Jones, Courtney        |
   02/22  | Sullivan, Colin        |
-  02/27  | Shen, Tong             |
+  02/27  | Shen, Tong             | Decision tree with `scikit-learn`
   02/27  | Alsubai, Nadia         |
   03/01  | Bedard, Kaitlyn        |
   03/06  | Nhan, Nathan           |
