Guanghong Yi will present Plotnie

--- a/intro.qmd
+++ b/intro.qmd
@@ -150,7 +150,7 @@ order). Add yours; note the syntax of nested list in Markdown.
     - Become proficient in Git/Github
     - Learn data science techniques like deep/machine learning, etc.
     111
-    
+
 
 
 ### Presentation Orders
@@ -210,7 +210,7 @@ Please use the following table to sign up.
   02/06  | Cheu, Catherine        |
   02/08  | Ho, Garrick            |
   02/13  | Mastrorilli, Ginamarie |
-  02/13  | Yi, Guanghong          |
+  02/13  | Yi, Guanghong          | Grammer of graphics for python `plotnine`
   02/15  | Karandikar, Shivaram   |
   02/20  | Chua, Yang Kang        |
   02/20  | Jones, Courtney        |
