--- a/mysection.qmd
+++ b/mysection.qmd
@@ -1,19 +1,21 @@
-# My Presentation Topic
+# Introduction to matplotlib
 
 
 ## Introduction
 
-Put an overview here. Use Markdown syntax.
 
+## How to Use
 
-## Sub Topic 1
-
-Put materials on topic 1 here
+The library is not part of the defaults used in Python. To install, use either pip or Anaconda.
 
 Python examples can be put into `python` code chunks:
 
 ```{python}
 import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+
+np.random.seed(8465);
 
 # do something
 ```
