added Shivaram's presentation topic to intro.qmd

--- a/intro.qmd
+++ b/intro.qmd
@@ -214,7 +214,7 @@ Please use the following table to sign up.
   02/08  | Ho, Garrick            | Pandas part 1
   02/13  | Mastrorilli, Ginamarie | Pandas part 2
   02/13  | Yi, Guanghong          | Grammer of graphics for python `plotnine`
-  02/15  | Karandikar, Shivaram   |
+  02/15  | Karandikar, Shivaram   | Text processing with NLTK
   02/20  | Chua, Yang Kang        |
   02/20  | Jones, Courtney        |
   02/22  | Sullivan, Colin        |
