Starting code and fixing conclusion

--- a/mysection.qmd
+++ b/mysection.qmd
@@ -32,6 +32,7 @@ We could start plotting another plot, but we have not saved our scatterplot as a
 If we want to keep a plot, we can save as a figure object. In addition, if we need multiple plots together, we can use a subplot shown as follows.
 
 ```{python}
+fig,(ax,ax1) = plt.subplot(2,1,figsize = (5,5))
 ```
 
 ## Animation
@@ -42,4 +43,3 @@ Inputs required include the frames and other functions needed to update the plot
 ## Conclusion
 
 We have demonstrated some capabilities of the matplotlib library but more complex methods of plotting and arranging visual elements can be found in the documentation.
-The examples provided should be able to help start the process of analyzing data for easier analysis.
