--- a/mysection.qmd
+++ b/mysection.qmd
@@ -35,8 +35,8 @@ If we want to keep a plot, we can save as a figure object. In addition, if we ne
 
 fig,(ax,ax1) = plt.subplots(1,2,figsize = (4,3))
 
-ax = plt.plot(x,z,label = "Line Graph")
-ax1 = plt.scatter(x,y,z,label = "Scatter in 3D")
+ax.plot(x,z,label = "Line Graph")
+ax1.scatter(x,y,z,label = "Scatter in 3D")
 ax.legend()
 ax1.legend()
 plt.show()
