--- a/mysection.qmd
+++ b/mysection.qmd
@@ -39,6 +39,8 @@ fig,(ax,ax1) = plt.subplots(1,2,figsize = (8,6))
 
 ax1 = plt.axes(projection = '3d')
 
+# Plot
+
 ax.plot(x,z,label = "Line Graph")
 ax1.scatter(x,y,z,label = "Scatter in 3D")
 ax.legend()
