--- a/mysection.qmd
+++ b/mysection.qmd
@@ -37,8 +37,8 @@ fig,(ax,ax1) = plt.subplots(1,2,figsize = (8,6))
 
 # Make 3D axes for ax1
 
-ax1 = plt.add_subplot(1,1,2,projection = '3d')
-ax = plt.add_subplot(1,1,1)
+ax1 = fig.add_subplot(1,1,2,projection = '3d')
+ax = fig.add_subplot(1,1,1)
 
 # Plot
 
