--- a/mysection.qmd
+++ b/mysection.qmd
@@ -35,8 +35,8 @@ If we want to keep a plot, we can save as a figure object. In addition, if we ne
 
 fig,(ax,ax1) = plt.subplots(1,2,figsize = (8,6))
 
-ax.scatter(y,z)
-ax1.scatter(x,z)
+ax.scatter(y,z,marker = '^')
+ax1.scatter(x,y,color = 'red')
 
 plt.show()
 ```
