--- a/python.qmd
+++ b/python.qmd
@@ -138,6 +138,34 @@ Apparently, the three solutions have very different performance for
 larger `n`.
 
 
+### Monte Hall
+Here is a function that performs the Monte Hall experiments.
+```{python}
+import numpy as np
+
+def montehall(ndoors, ntrials):
+    doors = np.arange(1, ndoors + 1) / 10
+    prize = np.random.choice(doors, size=ntrials)
+    player = np.random.choice(doors, size=ntrials)
+    host = np.array([np.random.choice([d for d in doors
+									   if d not in [player[x], prize[x]]])
+					 for x in range(ntrials)])
+    player2 = np.array([np.random.choice([d for d in doors
+										  if d not in [player[x], host[x]]])
+						for x in range(ntrials)])
+    return {'noswitch': np.sum(prize == player), 'switch': np.sum(prize == player2)}
+```
+
+Test it out:
+```{python}
+montehall(3, 1000)
+montehall(4, 1000)
+```
+
+The true value for the two strategies with $n$ doors are, respectively,
+$1 / n$ and $\frac{n - 1}{n (n - 2)}$.
+
+
 ## Variables versus Objects
 
 In Python, variables and the objects they point to actually live in
