--- a/mysection.qmd
+++ b/mysection.qmd
@@ -27,6 +27,7 @@ If the above does not work, then you would need the path of pip or Python to put
 ### Examples
 
 Let's start with a simple scatter plot. We would need to import the libraries as shown. For this example, we use the pyplot submodule, abbreviated to plt.
+We will use randomly generated data in 3 dimensions (x,y,z).
 
 ```{python}
 import pandas as pd
@@ -59,6 +60,8 @@ ax1.scatter(x,y,color = 'red')
 plt.show()
 ```
 
+We can also do 3d plots alongside 2d, but we need a different function in order to do so. The following uses 3d axes to plot the scatterplot.
+
 ```{python}
 
 fig = plt.figure()
@@ -71,7 +74,7 @@ ax = fig.add_subplot(121)
 # Plot
 
 ax.plot(x,z,label = "Line Graph")
-ax1.scatter(x,y,z,label = "Scatter in 3D")
+ax1.scatter(x,y,z,cmap = 'cool',label = "Scatter in 3D")
 ax.legend()
 ax1.legend()
 plt.show()
